# git-credential-pass

./: Cargo.toml
packaging/: PKGBUILD
src/: main.rs  paramparsing.rs  templating.rs  utils.rs
testing/: test.sh
